objects/vlocity_cmt__OmniUserSession__c.object
<CustomObject>
    <description>User session details</description>
    <fields>
        <fullName>vlocity_cmt__AcceptLanguage__c</fullName>
        <description>Language</description>
        <inlineHelpText>Language</inlineHelpText>
        <label>Accept Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BrowserVendor__c</fullName>
        <description>Browser vendor</description>
        <inlineHelpText>Browser vendor</inlineHelpText>
        <label>Browser Vendor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BrowserVersion__c</fullName>
        <description>Browser Version</description>
        <inlineHelpText>Browser Version</inlineHelpText>
        <label>Browser Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Channel__c</fullName>
        <description>User Channel</description>
        <inlineHelpText>User Channel</inlineHelpText>
        <label>Channel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FormFactor__c</fullName>
        <description>Client form factor</description>
        <inlineHelpText>Client form factor</inlineHelpText>
        <label>Form Factor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReferrerUrl__c</fullName>
        <description>Address of the previous web page</description>
        <inlineHelpText>Address of the previous web page</inlineHelpText>
        <label>Referrer Url</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SessionData__c</fullName>
        <description>Blob field to store raw session data payload</description>
        <inlineHelpText>Blob field to store raw session data payload</inlineHelpText>
        <label>Session Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SessionKey__c</fullName>
        <description>Unique string generated by UI code which identifies the analytics user session.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique string generated by UI code which identifies the analytics user session.</inlineHelpText>
        <label>Session Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SessionStartTime__c</fullName>
        <description>Record creation time</description>
        <inlineHelpText>Record creation time</inlineHelpText>
        <label>Session Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Subdomain__c</fullName>
        <description>Subdomain of the URL</description>
        <inlineHelpText>Subdomain of the URL</inlineHelpText>
        <label>Subdomain</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserAgentString__c</fullName>
        <description>Browser User Agent String</description>
        <inlineHelpText>Browser User Agent String</inlineHelpText>
        <label>User Agent String</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserName__c</fullName>
        <description>Session user name.</description>
        <inlineHelpText>Session user name.</inlineHelpText>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserProfileId__c</fullName>
        <description>User profile Id.</description>
        <inlineHelpText>User profile Id.</inlineHelpText>
        <label>User Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Omni User Session</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Omni User Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>